nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -883,6 +883,7 @@ span.inline-list-item {
     width: 100%;
     overflow: visible;
     white-space: initial;
+    margin-bottom:10px;
 }
 
 .section-help>* {
