nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -382,6 +382,11 @@ body.dragover .file-item.droppable-hide {
     display:none;
 }
 
+.file-item .document.with-mediaTypeIcon {
+    width: 100px;
+    height: 100px;
+}
+
 
 
 .small.cpanel_button {
