--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -358,7 +358,8 @@ body.dragover .file-item.droppable-hide {
     font-size: 10px;
 }
 
-.file-item .remove-btn, .file-item .edit-btn {
+
+.file-item .remove-btn, .file-item .edit-btn, span.document:after {
     position: absolute;
     top: 10px;
     right: 15px;
@@ -375,6 +376,13 @@ body.dragover .file-item.droppable-hide {
     background-repeat: no-repeat;
     background-size: 75%;
 }
+
+span.document:after {
+    top:none;
+    bottom: 30px;
+    background: mediumseagreen;
+}
+
 
 .file-item .edit-btn {
     background: mediumseagreen;
