nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -378,7 +378,7 @@ body.dragover .file-item.droppable-hide {
 }
 
 span.document:after {
-    top:none;
+    top:auto;
     bottom: 30px;
     background: mediumseagreen;
     content:"";
