--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -26,6 +26,11 @@ button.btn-reset-list {
 }
 
 
+.file-item span.document:after {
+    background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/download.png"); ?>");
+}
+
+
 button.btn-search-list {
     background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/search.png"); ?>?tint=rgb(106, 233, 191)");
 
