--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -27,7 +27,7 @@ button.btn-reset-list {
 
 
 .file-item span.document:after {
-    background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/download.png"); ?>");
+    background-image:url("<?php echo UrlFrom("{assets}/Control Panel Icons/download.png"); ?>?tint=rgb(127, 161, 255)");
 }
 
 
