nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -359,7 +359,7 @@ body.dragover .file-item.droppable-hide {
 }
 
 
-.file-item .remove-btn, .file-item .edit-btn, span.document:after {
+.file-item .remove-btn, .file-item .edit-btn, .file-item .document:after {
     position: absolute;
     top: 10px;
     right: 15px;
