nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/Generated Style Script.customCSS.css
+++ b/app/Generated Style Script.customCSS.css
@@ -10,6 +10,9 @@ $config=new core\Configuration('iconset');
     min-width: 200px;
     font-size: 15px;
 }
+.iw-content {
+    color: black;
+}
 
 
 .layers {
