nickola -- Auto Commit - Changes made through Administrator Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -298,6 +298,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 left: 0;
                 opacity: 0.2;
                 pointer-events: none;
+                    background-size: cover;
             }
             <?php
         }
