--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -298,7 +298,8 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 left: 0;
                 opacity: 0.2;
                 pointer-events: none;
-                    background-size: cover;
+                background-size: cover;
+                filter: blur(10px);
             }
             <?php
         }
