--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -165,6 +165,11 @@ label.boolean-field p {
     cursor: pointer;
 }
 
+.field-value-module.user-community {
+    color: #ceb250;
+    font-style: italic;
+}
+
 
 .login-form .application-logo {
     height: 200px;
