administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -950,6 +950,10 @@ span.inline-list-item {
     color: cadetblue;
 }
 
+.section-help .hint {
+    color: #ceb250;
+}
+
 /* youtube */
 
 img.youtubelogo {
