administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -954,6 +954,10 @@ span.inline-list-item {
     color: #ceb250;
 }
 
+.section-help .section-title {
+    padding-left: 0;
+}
+
 /* youtube */
 
 img.youtubelogo {
