administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -170,6 +170,11 @@ label.boolean-field p {
     font-style: italic;
 }
 
+.field-value-module.user-role {
+    color: #7fa1ff;
+    font-style: italic;
+}
+
 
 .login-form .application-logo {
     height: 200px;
