administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2130,6 +2130,10 @@ span.SearchModule.search-container {
 .TagCloudModule .tag-cloud>span.tag-el:hover {
   background-color: #4b58a7;
 }
+.TagCloudModule .tag-cloud>span.tag-el.locked {
+    background-color:rgba(0,0,0,0.2);
+    cursor:default;
+}
 .TagCloudModule .tag-cloud>span.tag-el.selected {
     background-color: #6A7CE9; 
 }
