administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2042,6 +2042,10 @@ button.t-btn {
     margin-right: 12px;
 }
 
+.ui-post-view .user-roles {
+    display: none;
+}
+
 .activity-feed:before {
     content: "";
     position: absolute;
