--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -342,7 +342,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 font-size: 10px;
             }
 
-            .survey-link:before {
+            .survey-link a:before {
                 background-image: url("<?php echo UrlFrom($surveyMenuIcon."?tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
                 content:"";
                 display: inline-block;
@@ -352,7 +352,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 margin: 5px;
                 vertical-align: middle;
             }
-            .survey-link:hover:before {
+            .survey-link a:hover:before {
                 background-image: url("<?php echo UrlFrom($surveyMenuIcon."?tint=".$config->getParameter("menuIconTint")); ?>");
             }
             <?php
