--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -63,6 +63,11 @@ foreach($config->getParameters() as $key=>$value){
                 background-image:url("<?php echo UrlFrom($icon."?thumb=>20x>20&tint=".$config->getParameter("menuIconTint")); ?>");
             }
             
+            
+            .label-<?php echo $key; ?>{
+                background-image:url("<?php echo UrlFrom($icon."?thumb=>20x>20&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
+            }
+            
             <?php
         }
     }
