administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2136,7 +2136,7 @@ span.SearchModule.search-container {
 }
 
 .uitext-container.mandatory-field:before {
-    content: "* required";
+    content: "* Required";
     color: mediumseagreen;
     float: right;
     font-size: 12px;
