--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -201,7 +201,7 @@ label.boolean-field p {
     margin-bottom: 50px;
 }
 
-.user-form .application-logo {
+.user-form .application-welcome {
 
     background-size: auto 100px;
     background-position: left;
