--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2152,7 +2152,8 @@ span.SearchModule.search-container {
     border-radius: 2px;
     color: white;
     font-weight: 100;
-    background-color:rgba(0,0,0,0.2)
+    background-color:rgba(0,0,0,0.2);
+    text-transform: capitalize;
 }
 .TagCloudModule .tag-cloud>span.tag-el:hover {
   background-color: #4b58a7;
