administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -2147,7 +2147,7 @@ span.SearchModule.search-container {
 }
 .uitext-container.optional:before {
     content: "* Optional";
-    color: #637594;
+    color: mediumseagreen;
     float: right;
     font-size: 10px;
     font-style: italic;
