administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1627,7 +1627,7 @@ span.layer.noIcon {
 
 span.lbl-txt {}
 
-.label.top-left {
+.label.top-left, .checkboxStyle {
     font-size: 12px;
     color: white;
     font-weight: 100;
