--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -1629,7 +1629,9 @@ span.layer.noIcon {
     outline:none;
 }
 
-span.lbl-txt {}
+.checkboxStyle .lbl-txt {
+    margin-left: 5px;
+}
 
 .label.top-left, .checkboxStyle {
     font-size: 13px;
