administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -659,6 +659,7 @@ span.inline-list-item {
 .user-detail .single_ImageContainer .resizedImage {
     border-radius: 100%;
     overflow: hidden;
+    background-color: white;
 }
 
 .user-detail .single_ImageContainer .resizedImage:before {
