administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -371,7 +371,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
             ?>
             
             .survey-link a.slack-link:before {
-                background-image: url("<?php echo UrlFrom($slackMenuIcon); ?>");
+                background-image: url("<?php echo UrlFrom($slackMenuIcon."?thumb=x>100y>100"); ?>");
             }
             
             <?php
