--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -319,7 +319,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
             ?>
 
             .inline-btn.optionlist:before {
-                background-image: url("<?php echo UrlFrom($optionsMenuIcon."?tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
+                background-image: url("<?php echo UrlFrom($optionsMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
                 display: inline-block;
                 width: 6px;
                 height: 25px;
@@ -329,7 +329,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 background-repeat: no-repeat;
             }
             .inline-btn.optionlist:hover:before {
-             background-image: url("<?php echo UrlFrom($optionsMenuIcon."?tint=".$config->getParameter("menuIconTint")); ?>");
+             background-image: url("<?php echo UrlFrom($optionsMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconTint")); ?>");
             }
             <?php
         }
@@ -348,7 +348,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
             }
 
             .survey-link a:before {
-                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
+                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconColor", "rgb(180,180,180)")); ?>");
                 content:"";
                 display: inline-block;
                 width: 20px;
@@ -358,7 +358,7 @@ $backgroundImage=$config->getParameter('backgroundImage', array());
                 vertical-align: middle;
             }
             .survey-link a:hover:before {
-                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?tint=".$config->getParameter("menuIconTint")); ?>");
+                background-image: url("<?php echo UrlFrom($surveyMenuIcon."?thumb=x>100y>100&tint=".$config->getParameter("menuIconTint")); ?>");
             }
             <?php
         }
