administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -237,6 +237,12 @@ label.boolean-field p {
     
 }
 
+.survey-link a {
+    display: block;
+    margin-left: 50px;
+    margin-top: 20px;
+}
+
 
 .left-panel .application-logo {
     width: 100%;
