administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -402,7 +402,7 @@ body.dragover .file-item.droppable-hide {
      
 }
 .file-list .file-item .file-container {
-    background-color: white;
+    background-color: #33404d;
     height: 108px;
     width: 100px;
     border:1px solid transparent;
