administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -426,6 +426,8 @@ body.dragover .file-item.droppable-hide {
     background: white;
     color: black;
     font-size: 10px;
+    
+    text-indent: 10px;
 }
 
 
