--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -252,7 +252,7 @@ foreach(['remove', 'edit', 'download'] as $fileFn){
             $editIcon=$editIcon[0];
         
         ?>
-            .file-item .btn-<?php echo $fileFn?>:after {
+            .file-item .<?php echo $fileFn?>-btn:after {
                 background-image:url("<?php echo UrlFrom($mediaIcon."?thumb=x>100y>100"); ?>");
             }
         
