--- a/app/ReferralManagement Dashboard Theme.customCSS.css
+++ b/app/ReferralManagement Dashboard Theme.customCSS.css
@@ -389,7 +389,17 @@ body.dragover .file-item.droppable-hide {
 }
 
 
-
+.file-item button {
+    height: 20px;
+    width: 20px;
+    background-size: 100%;
+    top: 10px;
+    position: absolute;
+    right: 14px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
 
 
 .file-list .file-item, .file-list .droppable {
