administrator -- Auto Commit - Changes made through Frontend Interface

--- a/app/ReferralManagement Generated Styles.customCSS.css
+++ b/app/ReferralManagement Generated Styles.customCSS.css
@@ -104,6 +104,7 @@ foreach($config->getParameters() as $key=>$value){
     background-image:url("<?php echo UrlFrom($applicationLogo."?thumb=>200x>200"); ?>");
 }  
 
+<?php
 
 $gatherLogo=$config->getParameter('gatherLogo', array());
         if(empty($gatherLogo)){
